# pdf-rest-api-samples

./: .gitignore  README.md
Bubble.io/: README.md
CPlusPlus/: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  markdown_json.cpp
CPlusPlus/Complex Flow Examples/: CMakeLists.txt  merge_different_file_types.cpp
CPlusPlus/Endpoint Examples/JSON Payload/: CMakeLists.txt  blank_pdf.cpp  markdown.cpp  rasterized_pdf.cpp  summarized_pdf_text.cpp  translated_pdf_text.cpp
CPlusPlus/Endpoint Examples/Multipart Payload/: CMakeLists.txt  blank_pdf.cpp  markdown.cpp  rasterized_pdf.cpp  summarized_pdf_text.cpp  translated_pdf_text.cpp
ChatGPT/: README.md
DotNET/: .env.example  AGENTS.md  DotNetSamples.csproj  Program.cs  README.md
DotNet/: README.md  bmp-endpoint.cs  compressed-pdf-endpoint.cs  decrypted-pdf-endpoint.cs  encrypted-pdf-endpoint.cs  flattened-annotations-pdf-endpoint.cs  flattened-forms-pdf-endpoint.cs  flattened-layers-pdf-endpoint.cs  flattened-transparencies-pdf-endpoint.cs  gif-endpoint.cs  jpg-endpoint.cs  linearized-pdf-endpoint.cs  merged-pdf-endpoint.cs  pdf-endpoint.cs  pdf-info-endpoint.cs  pdf-with-added-image-endpoint.cs  pdfa-endpoint.cs  pdfx-endpoint.cs  png-endpoint.cs  restricted-pdf-endpoint.cs  split-pdf-endpoint.cs  tif-endpoint.cs  unrestricted-pdf-endpoint.cs  upload-endpoint.cs  watermarked-pdf-endpoint.cs  zip-endpoint.cs
Go/: README.md
Google Apps Script/: README.md
Java/: README.md
JavaScript/: README.md  bmp-endpoint.js  compressed-pdf-endpoint.js  decrypted-pdf-endpoint.js  encrypted-pdf-endpoint.js  flattened-annotations-pdf-endpoint.js  flattened-forms-pdf-endpoint.js  flattened-layers-pdf-endpoint.js  flattened-transparencies-pdf-endpoint.js  gif-endpoint.js  jpg-endpoint.js  linearized-pdf-endpoint.js  merged-pdf-endpoint.js  package-lock.json  pdf-endpoint.js  pdf-with-added-image.js  pdfa-endpoint.js  png-endpoint.js  restricted-pdf-endpoint.js  split-pdf-endpoint.js  tif-endpoint.js  unrestricted-pdf-endpoint.js  upload-endpoint.js  watermarked-pdf-endpoint.js  zip-endpoint.js
JavaScript with Axios/: get-resource-id-endpoint.js  merged-pdf-endpoint.js  pdf-endpoint.js  pdf-info-endpoint.js  png-endpoint.js  split-pdf-endpoint.js
Make.com/: README.md
Microsoft Power Automate/: README.md
Node/: bmp-endpoint.js  compressed-pdf-endpoint.js  encrypted-pdf-endpoint.js  flattened-transparencies-pdf-endpoint.js  get-resource-id-endpoint.js  gif-endpoint.js  html-endpoint.js  jpg-endpoint.js  merged-pdf-endpoint.js  pdf-endpoint.js  pdf-info-endpoint.js  pdf-with-added-image.js  pdfa-endpoint.js  png-endpoint.js  restricted-pdf-endpoint.js  split-pdf-endpoint.js  tif-endpoint.js  watermarked-pdf.js  zip-endpoint.js
Node.JS/: bmp-endpoint.js  flattened-transparencies-pdf-endpoint.js  jpg-endpoint.js  merged-pdf-endpoint.js  pdf-endpoint.js  pdfa-endpoint.js  png-endpoint.js  tif-endpoint.js  unrestricted-pdf-endpoint.js  zip-endpoint.js
NodeJS-Fetch/: decrypted-pdf-endpoint.js  get-resource-id-endpoint.js  html-endpoint.js  pdf-with-added-image.js  pdfa-endpoint.js
NodeJS-Native/: bmp-endpoint.js  compressed-pdf-endpoint.js  decrypted-pdf-endpoint.js  encrypted-pdf-endpoint.js  flattened-transparencies-pdf-endpoint.js  gif-endpoint.js  jpg-endpoint.js  linearized-pdf-endpoint.js  merged-pdf-endpoint.js  pdf-endpoint.js  pdf-info-endpoint.js  pdfa-endpoint.js  png-endpoint.js  restricted-pdf-endpoint.js  split-pdf-endpoint.js  tif-endpoint.js  unrestricted-pdf-endpoint.js  zip-endpoint.js
PHP/: README.md  bmp-endpoint.php  compressed-pdf-endpoint.php  decrypted-pdf-endpoint.php  encrypted-pdf-endpoint.php  flattened-forms-pdf-endpoint.php  flattened-transparencies-pdf-endpoint.php  get-resource-id-endpoint.php  gif-endpoint.php  html-endpoint.php  jpg-endpoint.php  linearized-pdf-endpoint.php  merged-pdf-endpoint.php  pdf-endpoint.php  pdf-info-endpoint.php  pdf-with-added-image.php  pdfa-endpoint.php  png-endpoint.php  restricted-pdf-endpoint.php  split-pdf-endpoint.php  tif-endpoint.php  unrestricted-pdf-endpoint.php  upload-endpoint.php  watermarked-pdf-endpoint.php  zip-endpoint.php
Perl/: .env.example  .gitignore  AGENTS.md  README.md  cpanfile
Python/: README.md  bmp-endpoint.py  compressed-pdf-endpoint.py  decrypted-pdf-endpoint.py  encrypted-pdf-endpoint.py  flattened-annotations-pdf-endpoint.py  flattened-forms-pdf-endpoint.py  flattened-layers-pdf-endpoint.py  flattened-transparencies-pdf-endpoint.py  get-resource-id-endpoint.py  gif-endpoint.py  html-endpoint.py  jpg-endpoint.py  linearized-pdf-endpoint.py  merged-pdf-endpoint.py  pdf-endpoint.py  pdf-info-endpoint.py  pdf-with-added-image-endpoint.py  pdf-with-added-image.py  pdfa-endpoint.py  pdfx-endpoint.py  png-endpoint.py  restricted-pdf-endpoint.py  split-pdf-endpoint.py  tif-endpoint.py  unrestricted-pdf-endpoint.py  upload-endpoint.py  watermarked-pdf-endpoint.py  watermarked-pdf.py  zip-endpoint.py
R/: .Renviron.example  .gitignore  .lintr  AGENTS.md  README.md  requirements.R
Ruby/: .env.example  .gitignore  AGENTS.md  Gemfile  README.md
Rust/: README.md
Rust/Complex Flow Examples/ocr_with_extract_text/: Cargo.toml  ocr_with_extract_text.rs
Salesforce Apex/: README.md
Sample_Input/: pdfRest.docx  sample_input.php
VB.NET/: .env.example  .gitignore  AGENTS.md  Program.vb  README.md  VBNetSamples.vbproj
Zapier/: README.md
cURL/: README.md  compressed_pdf_medium.sh  decrypted_pdf.sh  decrypted_pdf_with_permissions_password.sh  encrypted_pdf_change_password.sh  flattened_annotations_pdf.sh  flattened_transparencies_pdf_default_settings.sh  flattened_transparencies_pdf_medium.sh  linearized_pdf.txt  merged_pdf_all_pages.sh  merged_pdf_custom_ranges.sh  (+24 more)
(+995 files in other folders)
