[package]
name = "ocr_with_extract_text"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ocr_with_extract_text"
path = "ocr_with_extract_text.rs"
